--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,7 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+bill:
+  name: Bill Liu
+  title: Catalyst
